// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginButton /> renders a loading indicator when loading is passed in as true 1`] = `
<button
  className="iap-login-form__submit-btn"
  disabled={true}
  onClick={[MockFunction]}
  type="button"
>
  <LoadingIcon />
  Sign In
</button>
`;

exports[`<LoginButton /> renders as expected 1`] = `
<button
  className="iap-login-form__submit-btn"
  disabled={false}
  onClick={[MockFunction]}
  type="button"
>
  Sign In
</button>
`;
